# Myfolio-Backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
api/v1/: api.py
api/v1/errors/: handlers.py
api/v1/routes/: auth.py  folios.py  templates.py  users.py
app/: application.py
app/api_v1/: api.py
app/api_v1/errors/: handlers.py
app/api_v1/routes/: auth.py  join.py  login.py  register.py  users.py
app/core/: config.py  exceptions.py  jwt.py  openapi.py  security.py  strings.py  utils.py
app/core/errors/: errors.py  handlers.py
app/core/models/: base.py  folios.py  templates.py  users.py
app/core/schemas/: errors.py  folios.py  jwt.py  responses.py  templates.py  users.py
app/db/: session.py
app/db/repositories/: base.py  folios.py  templates.py  users.py
app/dependencies/: auth.py  database.py  db.py  rdb_session.py  repositories.py
app/settings/: __init__.py
deployment/: build.sh
deployment/aws/: Pulumi.yaml  __main__.py  iam.py
infra/aws/: Pulumi.yaml  __main__.py  iam.py
tests/: conftest.py  resources.py
tests/test_api_v1/: test_auth.py  test_login.py  test_register.py  test_templates.py  test_users.py
