[tool.poetry]
name = "myfolio"
version = "0.1.0"
description = ""
authors = ["sun9zzang <sun9nyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
sqlalchemy = "^1.4.42"
pyjwt = "^2.6.0"
bcrypt = "^4.0.1"
pytest = "^7.1.3"
awscli = "^1.25.95"
boto3 = "^1.24.94"
pytest-asyncio = "^0.19.0"
pymysql = "^1.0.2"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
