[tool.poetry]
name = "myfolio"
version = "0.1.0"
description = ""
authors = ["sun9zzang <sun9nyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.85.1"
sqlalchemy = "^1.4.42"
pyjwt = "^2.6.0"
bcrypt = "^4.0.1"
pytest = "^7.1.3"
pymysql = "^1.0.2"
mangum = "^0.16.0"
orjson = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
