[tool.poetry]
name = "myfolio"
version = "0.1.0"
description = ""
authors = ["sun9zzang <sun9nyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.85.1"
sqlalchemy = "^1.4.42"
pyjwt = "^2.6.0"
bcrypt = "^4.0.1"
pytest = "^7.1.3"
pymysql = "^1.0.2"
mangum = "^0.16.0"
orjson = "^3.8.1"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.10.1"
boto3 = "^1.26.41"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
